Form fixes on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -479,8 +479,8 @@ img{
 .form{
     position: relative;
     margin:auto;
-    width: 100%;
-    padding:5rem;
+    width: 80%;
+    padding:0;
     height: 80%;
 }
 
